fix: styles on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,6 @@
 
 @layer components {
   .btn {
-    @apply px-4 py-2 rounded-md font-semibold secondary;
+    @apply px-4 py-2 rounded-md text-sm md:text-base font-semibold secondary;
   }
 }
